--- a/Code/ShipWorks/Properties/Resources.resx
+++ b/Code/ShipWorks/Properties/Resources.resx
@@ -1636,4 +1636,10 @@
   <data name="box_tall_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\box_tall_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="view_linked_arrow" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\view_linked_arrow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="view_linked_infinity" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\view_linked_infinity.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
