--- a/Code/ShipWorks/Properties/Resources.resx
+++ b/Code/ShipWorks/Properties/Resources.resx
@@ -1642,4 +1642,7 @@
   <data name="view_linked_infinity" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\view_linked_infinity.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="view_next" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\view_next.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
