--- a/Code/ShipWorks/Properties/Resources.resx
+++ b/Code/ShipWorks/Properties/Resources.resx
@@ -1648,4 +1648,7 @@
   <data name="checkbox_circle_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\checkbox_circle_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ups_from_shipworks" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ups_from_shipworks_2x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
