--- a/Code/ShipWorks/Properties/Resources.resx
+++ b/Code/ShipWorks/Properties/Resources.resx
@@ -1649,6 +1649,6 @@
     <value>..\Resources\checkbox_circle_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ups_from_shipworks" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ups_from_shipworks_2x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Resources\ups_from_shipworks.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
