--- a/Code/ShipWorks/Properties/Resources.resx
+++ b/Code/ShipWorks/Properties/Resources.resx
@@ -1546,9 +1546,6 @@
   <data name="index_32_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\index_32_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="box_closed_redo_16_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\box_closed_redo_16_16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="box_void_32_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\box_void_32_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -1650,5 +1647,11 @@
   </data>
   <data name="ups_from_shipworks" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ups_from_shipworks.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="box_closed_redo_16_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\box_closed_redo_16_16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="box_closed_redo_32_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\box_closed_redo_32_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
