--- a/Code/ShipWorks/Properties/Resources.resx
+++ b/Code/ShipWorks/Properties/Resources.resx
@@ -1654,4 +1654,7 @@
   <data name="box_closed_redo_32_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\box_closed_redo_32_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="element_into" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\element_into.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
