--- a/Code/ShipWorks/Stores/Management/AddStoreWizardFinishPage.resx
+++ b/Code/ShipWorks/Stores/Management/AddStoreWizardFinishPage.resx
@@ -123,7 +123,7 @@
   <data name="labelHubBlurb.Text" xml:space="preserve">
     <value>Manage your warehouse ship-from locations and other routing, view your order
 information, access data driven intelligence based on your shipping history, control
-your product inventory and more. Learn all about ShipWorks Hub here  or, if you're 
+your product inventory and more. Learn all about ShipWorks Hub  or, if you're 
 ready to get started you can launch it here.</value>
   </data>
 </root>
