--- a/Code/ShipWorks/Stores/Management/AddStoreWizardFinishPage.resx
+++ b/Code/ShipWorks/Stores/Management/AddStoreWizardFinishPage.resx
@@ -121,7 +121,7 @@
     <value>17, 17</value>
   </metadata>
   <data name="labelHubBlurb.Text" xml:space="preserve">
-    <value>Manage your warehouse ship-from locations and other routing, view your order
+    <value>Manage your warehouse ship-from locations and order routing, view your order
 information, access data driven intelligence based on your shipping history, control
 your product inventory and more. Learn all about ShipWorks Hub  or, if you're 
 ready to get started you can launch it here.</value>
