--- a/Code/ShipWorks/Properties/StoreIcons.resx
+++ b/Code/ShipWorks/Properties/StoreIcons.resx
@@ -364,4 +364,7 @@
   <data name="bonanza" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bonanza.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="api" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\api.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
