--- a/Code/ShipWorks/Shipping/Carriers/Postal/Usps/Registration/UspsPaymentControl.resx
+++ b/Code/ShipWorks/Shipping/Carriers/Postal/Usps/Registration/UspsPaymentControl.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="labelPaymentInfo.Text" xml:space="preserve">
-    <value>Stamps.com requires a payment method for buying postage and for the $15.99 Stamps.com monthly service fee. The payment information entered here will not be used by Interapptive for billing of any ShipWorks related services.</value>
+    <value>Stamps.com requires a payment method for buying postage and for the $15.99 Stamps.com monthly service fee. The payment information entered here will not be used by Auctane for billing of any ShipWorks related services.</value>
   </data>
   <data name="labelAch.Text" xml:space="preserve">
     <value>If you would like to use an alternate method of payment such as ACH, please call Stamps.com Customer Care at 1-888-434-0055 and mention that you are a ShipWorks customer.  A customer care representative will help you in setting up an alternate payment method.</value>
